--- a/styles/industry-specific/luma-theme/luma-theme.css
+++ b/styles/industry-specific/luma-theme/luma-theme.css
@@ -729,12 +729,14 @@ body.luma-theme main .product-detail .recipe-sidebar .pd-rec-card-title {
   color: #000000;
   font-family: 'Adobe Clean Bold', sans-serif;
   text-align: left;
-  font-size: 16px;
+}
+
+body.luma-theme main .product-detail .recipe-sidebar .pd-rec-card-title {
+  font-size: 16px !important;
 }
 
 body.luma-theme main .product-detail .recipe-sidebar .pd-rec-title {
   text-transform: uppercase;
-  font-size: 21px;
 }
 
 body.luma-theme main .product-detail .recipe-sidebar .pd-rec-card-meta::after {
